chore: update docs with wallets

--- a/doc/addons/std.mdx
+++ b/doc/addons/std.mdx
@@ -73,6 +73,57 @@ output "message" {
 ---
 
 
+## secp256k1_recover {{ tag: 'function' }}
+
+<Row>
+  <Col>
+
+Coming soon
+
+### Inputs
+
+<Properties>
+
+
+  <Property name="value">
+    Coming soon
+  </Property>
+
+
+</Properties>
+
+### Output
+
+<Properties>
+  <Property name="value">
+    
+  </Property>
+</Properties>
+
+
+<CodeGroup title="Example using secp256k1_recover">
+
+
+```hcl {{ title: 'main.tx' }}
+          
+```
+
+
+```json {{ title: 'main.json' }}
+// Coming soon
+```
+
+```yaml {{ title: 'main.yaml' }}
+# Coming soon
+```
+
+</CodeGroup>
+</Col>
+</Row>
+
+---
+
+
 ## index {{ tag: 'function' }}
 
 <Row>
@@ -1112,6 +1163,159 @@ output "decoded" {
 }
 > decoded: 0x48656c6c6f20776f726c6421
 
+```
+
+
+```json {{ title: 'main.json' }}
+// Coming soon
+```
+
+```yaml {{ title: 'main.yaml' }}
+# Coming soon
+```
+
+</CodeGroup>
+</Col>
+</Row>
+
+---
+
+
+## ripemd160 {{ tag: 'function' }}
+
+<Row>
+  <Col>
+
+Coming soon
+
+### Inputs
+
+<Properties>
+
+
+  <Property name="value">
+    Coming soon
+  </Property>
+
+
+</Properties>
+
+### Output
+
+<Properties>
+  <Property name="value">
+    
+  </Property>
+</Properties>
+
+
+<CodeGroup title="Example using ripemd160">
+
+
+```hcl {{ title: 'main.tx' }}
+              
+```
+
+
+```json {{ title: 'main.json' }}
+// Coming soon
+```
+
+```yaml {{ title: 'main.yaml' }}
+# Coming soon
+```
+
+</CodeGroup>
+</Col>
+</Row>
+
+---
+
+
+## sha256 {{ tag: 'function' }}
+
+<Row>
+  <Col>
+
+Coming soon
+
+### Inputs
+
+<Properties>
+
+
+  <Property name="value">
+    Coming soon
+  </Property>
+
+
+</Properties>
+
+### Output
+
+<Properties>
+  <Property name="value">
+    
+  </Property>
+</Properties>
+
+
+<CodeGroup title="Example using sha256">
+
+
+```hcl {{ title: 'main.tx' }}
+              
+```
+
+
+```json {{ title: 'main.json' }}
+// Coming soon
+```
+
+```yaml {{ title: 'main.yaml' }}
+# Coming soon
+```
+
+</CodeGroup>
+</Col>
+</Row>
+
+---
+
+
+## encode_hex {{ tag: 'function' }}
+
+<Row>
+  <Col>
+
+Coming soon
+
+### Inputs
+
+<Properties>
+
+
+  <Property name="value">
+    Coming soon
+  </Property>
+
+
+</Properties>
+
+### Output
+
+<Properties>
+  <Property name="value">
+    
+  </Property>
+</Properties>
+
+
+<CodeGroup title="Example using encode_hex">
+
+
+```hcl {{ title: 'main.tx' }}
+          
 ```
 
 
