--- a/components/txtx-addon-kit/src/doc/default_addon_template.mdx
+++ b/components/txtx-addon-kit/src/doc/default_addon_template.mdx
@@ -126,3 +126,65 @@ When the `{{ matcher }}` action is successfully executed, the following outputs 
 ---
 
 {{/ actions }}
+
+{{# wallets }}
+
+## {{ matcher }} {{double_open}} tag: 'wallet' {{double_close}}
+
+{{{ documentation }}}
+
+### Inputs
+
+<Properties>
+
+{{# inputs }}
+
+  <Property name="{{ name }}" type="{{ requirementStatus }}">
+    {{{ documentation }}}
+  </Property>
+
+{{/ inputs }}
+
+</Properties>
+
+### Outputs
+
+<Note>
+
+When the `{{ matcher }}` action is successfully executed, the following outputs are attached to the action
+
+</Note>
+
+<Properties>
+
+{{# outputs }}
+
+  <Property name="{{ name }}">
+    {{{ documentation }}}
+  </Property>
+
+{{/ outputs }}
+
+</Properties>
+
+<CodeGroup title="Example using {{ matcher }}">
+
+
+```hcl {{double_open}} title: 'main.tx' {{double_close}}
+{{{ example }}}
+```
+
+
+```json {{double_open}} title: 'main.json' {{double_close}}
+// Coming soon
+```
+
+```yaml {{double_open}} title: 'main.yaml' {{double_close}}
+# Coming soon
+```
+
+</CodeGroup>
+
+---
+
+{{/ wallets }}
