--- a/doc/addons/std.mdx
+++ b/doc/addons/std.mdx
@@ -78,15 +78,20 @@ output "message" {
 <Row>
   <Col>
 
-Coming soon
+`secp256k1_recover` recovers a public key from a secp256k1 signature.
 
 ### Inputs
 
 <Properties>
 
 
-  <Property name="value">
-    Coming soon
+  <Property name="message">
+    The hash of the original message that was signed.
+  </Property>
+
+
+  <Property name="signature">
+    The signature that was produced using the secp256k1 elliptic curve algorithm.
   </Property>
 
 
@@ -96,7 +101,7 @@ Coming soon
 
 <Properties>
   <Property name="value">
-    
+    The recovered public key.
   </Property>
 </Properties>
 
@@ -105,7 +110,11 @@ Coming soon
 
 
 ```hcl {{ title: 'main.tx' }}
-          
+output "recovered_public_key" {
+    value = secp256k1_recover("0x6a2ce4b8aab1ef79aa1aa617cf6b72d7146857b83055e203b67c5177faef212c", "0x0165a85a1e64d7157d678d177bc8a9e6bfb8d750458d52a31c34abe1e56475b5eb62f183a5e6ddbced38fca93a8ff1c73b4ce66231e39392572af916b5303fbe12")
+}
+// > recovered_public_key: 0x03b3e0a76b292b2c83fc0ac14ae6160d0438ebe94e14bbb5b7755153628886e08e
+
 ```
 
 
@@ -1186,7 +1195,7 @@ output "decoded" {
 <Row>
   <Col>
 
-Coming soon
+`ripemd160` computes the Ripemd160 hash of a value.
 
 ### Inputs
 
@@ -1194,7 +1203,7 @@ Coming soon
 
 
   <Property name="value">
-    Coming soon
+    The hex-encoded value to hash.
   </Property>
 
 
@@ -1204,7 +1213,7 @@ Coming soon
 
 <Properties>
   <Property name="value">
-    
+    The hashed result.
   </Property>
 </Properties>
 
@@ -1213,7 +1222,11 @@ Coming soon
 
 
 ```hcl {{ title: 'main.tx' }}
-              
+output "hashed_data" {
+    value = ripemd160(encode_hex("hello, world"))
+}
+// > hashed_data: 0XA3201F82FCA034E46D10CD7B27E174976E241DA2
+
 ```
 
 
@@ -1237,7 +1250,7 @@ Coming soon
 <Row>
   <Col>
 
-Coming soon
+`sha256` computes the sha256 hash of a value.
 
 ### Inputs
 
@@ -1245,7 +1258,7 @@ Coming soon
 
 
   <Property name="value">
-    Coming soon
+    The hex-encoded value to hash.
   </Property>
 
 
@@ -1255,7 +1268,7 @@ Coming soon
 
 <Properties>
   <Property name="value">
-    
+    The hashed result.
   </Property>
 </Properties>
 
@@ -1264,7 +1277,11 @@ Coming soon
 
 
 ```hcl {{ title: 'main.tx' }}
-              
+output "hashed_data" {
+    value = sha256(encode_hex("hello, world"))
+}
+// > hashed_data: 0x09ca7e4eaa6e8ae9c7d261167129184883644d07dfba7cbfbc4c8a2e08360d5b
+
 ```
 
 
@@ -1288,7 +1305,7 @@ Coming soon
 <Row>
   <Col>
 
-Coming soon
+`encode_hex` encodes a string as a hexadecimal string.
 
 ### Inputs
 
@@ -1296,7 +1313,7 @@ Coming soon
 
 
   <Property name="value">
-    Coming soon
+    Any input string.
   </Property>
 
 
@@ -1306,7 +1323,7 @@ Coming soon
 
 <Properties>
   <Property name="value">
-    
+    The input string in its hexadecimal representation.
   </Property>
 </Properties>
 
@@ -1315,7 +1332,11 @@ Coming soon
 
 
 ```hcl {{ title: 'main.tx' }}
-          
+output "encoded_hex" {
+    value = encode_hex("hello, world")
+}
+// > encoded_hex: 68656C6C6F2C20776F726C64
+
 ```
 
 
