--- a/doc/addons/evm/wallets/page.mdx
+++ b/doc/addons/evm/wallets/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Ethereum and EVM Compatible Blockchains Wallets",
-    description: "Wallets for Ethereum and EVM Compatible Blockchains",
+    title: "Ethereum and EVM Compatible Blockchains (alpha) Wallets",
+    description: "Wallets for Ethereum and EVM Compatible Blockchains (alpha)",
 };
 
-# Ethereum and EVM Compatible Blockchains Wallets {{ id: "evm-wallets" }}
+# Ethereum and EVM Compatible Blockchains (alpha) Wallets {{ id: "evm-wallets" }}
 
 
 
