--- a/doc/addons/stacks/wallets/page.mdx
+++ b/doc/addons/stacks/wallets/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Stacks Blockchain Wallets",
-    description: "Wallets for Stacks Blockchain",
+    title: "Stacks Blockchain (beta) Wallets",
+    description: "Wallets for Stacks Blockchain (beta)",
 };
 
-# Stacks Blockchain Wallets {{ id: "stacks-wallets" }}
+# Stacks Blockchain (beta) Wallets {{ id: "stacks-wallets" }}
 
 
 
