--- a/doc/addons/stacks/actions/page.mdx
+++ b/doc/addons/stacks/actions/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Stacks Blockchain Actions",
-    description: "Actions for Stacks Blockchain",
+    title: "Stacks Blockchain (beta) Actions",
+    description: "Actions for Stacks Blockchain (beta)",
 };
 
-# Stacks Blockchain Actions {{ id: "stacks-actions" }}
+# Stacks Blockchain (beta) Actions {{ id: "stacks-actions" }}
 
 
 
@@ -183,6 +183,121 @@ When the `decode_call_contract` action is successfully executed, the following o
 ---
 
 
+## deploy_contract {{ tag: 'action' }}
+
+The `deploy_contract` action encodes a contract deployment transaction, signs the transaction using a wallet, and broadcasts the signed transaction to the network.
+
+### Inputs
+
+<Properties>
+
+
+  <Property name="source_code" type="required">
+    The code of the contract method to deploy.
+  </Property>
+
+
+  <Property name="contract_name" type="required">
+    The name of the contract to deploy.
+  </Property>
+
+
+  <Property name="clarity_version" type="optional">
+    The version of clarity to use (default: latest).
+  </Property>
+
+
+  <Property name="network_id" type="optional">
+    The network id used to validate the transaction version.
+  </Property>
+
+
+  <Property name="signer" type="required">
+    A reference to a wallet construct, which will be used to sign the transaction payload.
+  </Property>
+
+
+  <Property name="confirmations" type="optional">
+    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues.
+  </Property>
+
+
+  <Property name="nonce" type="optional">
+    The account nonce of the signer. This value will be retrieved from the network if omitted.
+  </Property>
+
+
+  <Property name="fee" type="optional">
+    The transaction fee. This value will automatically be estimated if omitted.
+  </Property>
+
+
+  <Property name="post_conditions" type="optional">
+    The post conditions to include to the transaction.
+  </Property>
+
+
+</Properties>
+
+### Outputs
+
+<Note>
+
+When the `deploy_contract` action is successfully executed, the following outputs are attached to the action
+
+</Note>
+
+<Properties>
+
+
+  <Property name="signed_transaction_bytes">
+    The signed transaction bytes.
+  </Property>
+
+
+  <Property name="tx_id">
+    The transaction id.
+  </Property>
+
+
+  <Property name="result">
+    The transaction result.
+  </Property>
+
+
+</Properties>
+
+<CodeGroup title="Example using deploy_contract">
+
+
+```hcl {{ title: 'main.tx' }}
+action "counter_deployment" "stacks::deploy_contract" {
+    description = "Deploy counter contract."
+    source_code = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.pyth-oracle-v1"
+    contract_name = "verify-and-update-price-feeds"
+    signer = wallet.alice
+}
+output "contract_tx_id" {
+  value = action.counter_deployment.tx_id
+}
+// > contract_tx_id: 0x1020321039120390239103193012909424854753848509019302931023849320
+
+```
+
+
+```json {{ title: 'main.json' }}
+// Coming soon
+```
+
+```yaml {{ title: 'main.yaml' }}
+# Coming soon
+```
+
+</CodeGroup>
+
+---
+
+
 ## call_contract {{ tag: 'action' }}
 
 The `call_contract` action encodes a valid contract call payload and serializes it as a hex string.
@@ -284,62 +399,6 @@ output "network_id" {
 ---
 
 
-## deploy_contract {{ tag: 'action' }}
-
-Coming soon
-
-### Inputs
-
-<Properties>
-
-
-  <Property name="clarity_value" type="optional">
-    
-  </Property>
-
-
-</Properties>
-
-### Outputs
-
-<Note>
-
-When the `deploy_contract` action is successfully executed, the following outputs are attached to the action
-
-</Note>
-
-<Properties>
-
-
-  <Property name="bytes">
-    
-  </Property>
-
-
-</Properties>
-
-<CodeGroup title="Example using deploy_contract">
-
-
-```hcl {{ title: 'main.tx' }}
-// Coming soon
-
-```
-
-
-```json {{ title: 'main.json' }}
-// Coming soon
-```
-
-```yaml {{ title: 'main.yaml' }}
-# Coming soon
-```
-
-</CodeGroup>
-
----
-
-
 ## broadcast_transaction {{ tag: 'action' }}
 
 The `broadcast_transaction` action sends a signed transaction payload to the specified network.
@@ -378,6 +437,11 @@ When the `broadcast_transaction` action is successfully executed, the following 
 
 
   <Property name="tx_id">
+    The transaction id.
+  </Property>
+
+
+  <Property name="value">
     The transaction id.
   </Property>
 
@@ -594,6 +658,11 @@ When the `send_contract_call` action is successfully executed, the following out
   </Property>
 
 
+  <Property name="value">
+    The transaction id.
+  </Property>
+
+
   <Property name="result">
     The transaction result.
   </Property>
@@ -627,6 +696,112 @@ value = action.my_ref.result
 }
 // > tx_id: 0x...
 // > result: success
+
+```
+
+
+```json {{ title: 'main.json' }}
+// Coming soon
+```
+
+```yaml {{ title: 'main.yaml' }}
+# Coming soon
+```
+
+</CodeGroup>
+
+---
+
+
+## send_stx {{ tag: 'action' }}
+
+The `send_stx` action encodes a STX transfer transaction, signs the transaction using a wallet, and broadcasts the signed transaction to the network.
+
+### Inputs
+
+<Properties>
+
+
+  <Property name="amount" type="required">
+    The amount of STX to send.
+  </Property>
+
+
+  <Property name="recipient" type="required">
+    The recipient of the transfer.
+  </Property>
+
+
+  <Property name="network_id" type="optional">
+    The network id used to validate the transaction version.
+  </Property>
+
+
+  <Property name="signer" type="required">
+    A reference to a wallet construct, which will be used to sign the transaction payload.
+  </Property>
+
+
+  <Property name="confirmations" type="optional">
+    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues.
+  </Property>
+
+
+  <Property name="nonce" type="optional">
+    The account nonce of the signer. This value will be retrieved from the network if omitted.
+  </Property>
+
+
+  <Property name="fee" type="optional">
+    The transaction fee. This value will automatically be estimated if omitted.
+  </Property>
+
+
+</Properties>
+
+### Outputs
+
+<Note>
+
+When the `send_stx` action is successfully executed, the following outputs are attached to the action
+
+</Note>
+
+<Properties>
+
+
+  <Property name="signed_transaction_bytes">
+    The signed transaction bytes.
+  </Property>
+
+
+  <Property name="tx_id">
+    The transaction id.
+  </Property>
+
+
+  <Property name="result">
+    The transaction result.
+  </Property>
+
+
+</Properties>
+
+<CodeGroup title="Example using send_stx">
+
+
+```hcl {{ title: 'main.tx' }}
+action "stx_transfer" "stacks::send_stx" {
+    description = "Send µSTX to Bob."
+    recipient = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM"
+    amount = 1000000
+    memo = "0x10394390"
+    signer = wallet.alice
+}            
+output "transfer_tx_id" {
+    value = action.stx_transfer.tx_id
+}
+// > transfer_tx_id: 0x1020321039120390239103193012909424854753848509019302931023849320
 
 ```
 
