--- a/doc/addons/stacks/functions/page.mdx
+++ b/doc/addons/stacks/functions/page.mdx
@@ -877,7 +877,7 @@ action "my_tx" "stacks::send_contract_call" {
 
 
   <Property name="contract_asset_id">
-    The NFT Contract Asset Id to check ({principal}.{contract_nam}::{non_fungible_storage}).
+    The NFT Contract Asset Id to check ({{principal}}.{{contract_name}}::{{non_fungible_storage}}).
   </Property>
 
 
@@ -950,7 +950,7 @@ action "my_tx" "stacks::send_contract_call" {
 
 
   <Property name="contract_asset_id">
-    The NFT Contract Asset Id to check ({principal}.{contract_nam}::{non_fungible_storage}).
+    The NFT Contract Asset Id to check ({{principal}}.{{contract_name}}::{{non_fungible_storage}}).
   </Property>
 
 
